--- a/example-projects/gml-raptor-demo/datafiles/index.html
+++ b/example-projects/gml-raptor-demo/datafiles/index.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8"/>
 
         <!-- Set the title bar of the page -->
-        <title>Rising Demons</title>
+        <title>gml-raptor-demo</title>
 
         <!-- Set the background colour of the document -->
         <style>
@@ -80,7 +80,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="game/gml-raptor.js?CMQAC=2015636066"></script>
+		<script type="text/javascript" src="game/gml-raptor-demo.js?VGNAC=997545089"></script>		
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
