--- a/gml-raptor/datafiles/index.html
+++ b/gml-raptor/datafiles/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/gml-raptor.js?CMQAC=2015636066"></script>
+        <script type="text/javascript" src="game/gml-raptor.js?CMQAC=2015636066"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
