roomcontroller transit fix

--- a/gml-raptor/datafiles/index.html
+++ b/gml-raptor/datafiles/index.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8"/>
 
         <!-- Set the title bar of the page -->
-        <title>Rising Demons</title>
+        <title>gml-raptor</title>
 
         <!-- Set the background colour of the document -->
         <style>
