--- a/gml-raptor/datafiles/index.html
+++ b/gml-raptor/datafiles/index.html
@@ -80,15 +80,17 @@
         </div>
 
         <!-- Run the game code -->
-       <script>
+<script>
+     // Enter your project name here!
+     var project_name = 'gml-raptor';
+
      //Cache-Buster
      function generateRandomNumber() {
          return Math.floor(Math.random() * 1000000); 
      }
 
      var script = document.createElement('script');
-     var project_name = 'gml-raptor.js';
-     script.src = 'game/' + project_name + '?CacheBuster=' + generateRandomNumber();
+     script.src = 'game/' + project_name + '.js?CacheBuster=' + generateRandomNumber();
      script.type = 'text/javascript';
 
      document.body.appendChild(script);
@@ -97,9 +99,9 @@
  <!--<script type="text/javascript" src="game/gml-raptor.js?CMQAC=2015636066"></script>-->
  <script>window.onload = GameMaker_Init;</script>
         <script>
-			document.cookie.split(";").forEach(function(c) {
-				document.cookie = c.replace(/^ +/, "").replace(/=.*/, "=;expires=" + new Date().toUTCString() + ";path=/");
-			});
+			//document.cookie.split(";").forEach(function(c) {
+			//	document.cookie = c.replace(/^ +/, "").replace(/=.*/, "=;expires=" + new Date().toUTCString() + ";path=/");
+			//});
 			
 			window.onload = GameMaker_Init();
 		</script>
